--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
     "private": true,
-    "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "mix",
+        "watch": "mix watch",
+        "hot": "mix watch --hot",
+        "prod": "mix --production"
     },
     "devDependencies": {
         "@babel/preset-react": "^7.25.9",
         "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0.0",
+        "babel-loader": "^9.2.1",
+        "bootstrap": "^5.3.3",
+        "jquery": "^3.7.1",
+        "laravel-mix": "^6.0.49",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "vite": "^5.0.0"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.77.6",
+        "sass-loader": "^12.6.0"
+    },
+    "dependencies": {
+        "styled-components": "^6.1.11"
     }
 }
