--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "sass-loader": "^12.6.0"
     },
     "dependencies": {
+        "react-icons": "^5.3.0",
         "styled-components": "^6.1.11"
     }
 }
